plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa 사용
    implementation 'org.springframework.boot:spring-boot-starter-web' //spring web 의존성
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'//redis 의존성
    implementation 'org.projectlombok:lombok'//lombok 의존성

    implementation 'org.springframework.boot:spring-boot-starter-security'//security
    implementation 'org.springframework.boot:spring-boot-starter-websocket' //websocket
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    testImplementation 'org.springframework.security:spring-security-test' //security
    developmentOnly 'org.springframework.boot:spring-boot-devtools' // devtools 의존성
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'//swagger 의존성

    annotationProcessor('org.projectlombok:lombok')
    runtimeOnly 'org.postgresql:postgresql' //postgresql


    // Spring Boot Starter Test (JUnit 5 포함)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // JUnit Jupiter (JUnit 5)
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
